comparative analysis in text

--- a/task-4/mate.ipynb
+++ b/task-4/mate.ipynb
@@ -2846,7 +2846,88 @@
    "id": "0a67f84b",
    "metadata": {},
    "source": [
-    "I do a more detailed comparison in [results/final-evaluation.txt](results/final-evaluation.txt)"
+    "# More Detailed Text Comparison\n",
+    "\n",
+    "I do a more detailed comparison in between the first and final texts. \n",
+    "\n",
+    "\n",
+    "To start with, statistics can be found above.  \n",
+    "\n",
+    "\n",
+    "[ORIGINAL TEXT]  \n",
+    "The quiet hum of this neighborhood always felt like safety, a soft blanket of routine where the biggest scandal was usually a zoning dispute or an unkempt lawn. I honestly believed I knew the man living in the yellow bungalow across the street. He was the sort of person who returned borrowed tools early and bought Girl Scout cookies by the case, practically invisible in his decency. That illusion shattered the afternoon I accidentally opened his mail, a simple mix-up by the postman. The letter wasn't a utility bill or a birthday card; it was a heavily redacted government dossier with a photo of him looking twenty years younger and terrifyingly cold. Standing there on my porch, holding the envelope that felt suddenly heavy, I realized his gentle demeanor wasn't a personality trait. It was a camouflage, perfect and impenetrable, hiding a history that had no business existing between the library and the bakery.\n",
+    "\n",
+    "Classification:\n",
+    "  - P(Human): 0.0000\n",
+    "  - P(AI): 1.0000\n",
+    "  - P(AI-mimicry): 0.0000\n",
+    "  - Predicted: Class 2 (conf=1.0000)\n",
+    "---\n",
+    "\n",
+    "[BEST EVOLVED TEXT]  \n",
+    "You know, this place was supposed to be about a little bit of peace and quiet in our little corner of the world, that sorta was the point of it all, where the biggest deal was people fighting over a fence or some stupid property line, that sort of thing, you know what I mean? And the old guy in the yellow house across the street was the poster boy for it all, I guess, but I swear to god, man, he was just so nice and normal it was almost weird, I mean, you were just so sure of him right away. It's like you just knew he was the guy who'd borrow a lawn mower and get it back to you early, in better shape than when he got it, and he always bought a whole case of those Girl Scout cookies from the kids, too. But that was all put to rest that day in a big fat mix-up with the postman when I got his mail and opened it by total accident, just autopilot, not even thinking twice. And let me tell you what, it wasn't some phone bill or a card from his grandkids, no sir, not at all, no, it was not even close, no way. It was this big, thick, weird government file thing, all marked up with a criss-cross mess of red and thick, sharpied black lines, like for real spy movie stuff. And right in there, staring out from a photo twenty years old or so, was his face, but so much younger, his eyes holding this scary, cold, dead, hard look I'd never seen before, not at all like him. It all just hit me right then and there, holding that heavy old thing, that his whole mild-mannered, nice-guy act wasn't who he was at all, man, not in any sort of way; it was a big old cover-up, a whole other secret life, and whatever that life was, it sure damn had no place in our world of potlucks and block parties in our sleepy little town, you know?\n",
+    "\n",
+    "Classification:\n",
+    "  - P(Human): 0.7772\n",
+    "  - P(AI): 0.2218\n",
+    "  - P(AI-mimicry): 0.0010\n",
+    "  - Predicted: Class 1 (conf=0.7772)\n",
+    "\n",
+    "IMPROVEMENTS  \n",
+    "P(Human) change: 0.0000 → 0.7772 (+0.7772)  \n",
+    "P(AI) change: 1.0000 → 0.2218 (-0.7782)  \n",
+    "Semantic similarity: 0.6894  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Basic Differences\n",
+    "\n",
+    "- The original text has 154 words, while the evolved text has 350 words. \n",
+    "- The evolved text tends to over-explain\n",
+    "- The evolved text uses simpler words\n",
+    "- The evolved text uses rhetorics more\n",
+    "\n",
+    "\n",
+    "## More detailed\n",
+    "\n",
+    "| Original Text | Evolved Text |\n",
+    "| --- | --- |\n",
+    "| \"The quiet hum of this neighborhood\" | \"a little bit of peace and quiet in our little corner of the world\" |\n",
+    "| \"a soft blanket of routine\" | \"that sorta was the point of it all\" |\n",
+    "| \"where the biggest scandal was usually a zoning dispute or an unkempt lawn\" | \"where the biggest deal was people fighting over a fence or some stupid property line\" |\n",
+    "| \"the man living in the yellow bungalow across the street\" | \"the old guy in the yellow house across the street\" |\n",
+    "| \"I honestly believed I knew the man\" | \"you were just so sure of him right away\" |\n",
+    "| \"practically invisible in his decency\" | \"so nice and normal it was almost weird\" |\n",
+    "| \"gentle demeanor\" | \"nice and normal\" |\n",
+    "| \"returned borrowed tools early\" | \"borrow a lawn mower and get it back to you early\" |\n",
+    "| *(implicit)* | \"in better shape than when he got it\" |\n",
+    "| \"bought Girl Scout cookies by the case\" | \"bought a whole case of those Girl Scout cookies\" |\n",
+    "| \"That illusion shattered\" | \"that was all put to rest\" |\n",
+    "| \"I realized his gentle demeanor wasn't a personality trait\" | \"his whole mild-mannered, nice-guy act wasn't who he was at all\" |\n",
+    "| \"I accidentally opened his mail\" | \"I got his mail and opened it by total accident\" |\n",
+    "| \"a simple mix-up by the postman\" | \"a big fat mix-up with the postman\" |\n",
+    "| *Nothing mentioned* | \"just autopilot, not even thinking twice\" |\n",
+    "| \"The letter wasn't a utility bill or a birthday card\" | \"it wasn't some phone bill or a card from his grandkids\" |\n",
+    "| *(concise negation)* | \"no sir… not at all… not even close… no way\" |\n",
+    "| \"a heavily redacted government dossier\" | \"this big, thick, weird government file thing\" |\n",
+    "| \"heavily redacted\" | \"criss-cross mess of red and thick, sharpied black lines\" |\n",
+    "| *(implicit seriousness)* | \"for real spy movie stuff\" |\n",
+    "| \"with a photo of him looking twenty years younger\" | \"a photo twenty years old or so… his face, but so much younger\" |\n",
+    "| \"terrifyingly cold\" | \"scary, cold, dead, hard look\" |\n",
+    "| *(single adjective)* | *(stacked adjectives)* |\n",
+    "| \"holding the envelope that felt suddenly heavy\" | \"holding that heavy old thing\" |\n",
+    "| \"Standing there on my porch\" | \"right then and there\" |\n",
+    "| \"I realized\" | \"it all just hit me\" |\n",
+    "| \"wasn't a personality trait\" | \"wasn't who he was at all\" |\n",
+    "| \"It was a camouflage\" | \"it was a big old cover-up\" |\n",
+    "| \"perfect and impenetrable\" | \"a whole other secret life\" |\n",
+    "| \"a history that had no business existing\" | \"whatever that life was, it sure damn had no place\" |\n",
+    "| \"between the library and the bakery\" | \"our world of potlucks and block parties\" \n",
+    "| Uses metaphors | emphasis through repetition |\n",
+    "| Literary narration | Spoken storytelling |\n",
+    "| Implicit emotion | Explicit emotion |\n",
+    "\n",
+    "\n"
    ]
   }
  ],
