--- a/task-4/part-2.ipynb
+++ b/task-4/part-2.ipynb
@@ -8,7 +8,9 @@
     "# Part 2 - Personal Test\n",
     "\n",
     "I will give it a text, see what it says and then try to manually change it.  \n",
-    "I will use the [analysis](results/final-evaluation.md) I did for the difference betweent the original and evolved texts in MATE."
+    "I will use the [analysis](results/final-evaluation.md) I did for the difference betweent the original and evolved texts in MATE.\n",
+    "\n",
+    "I will try making both an AI generated text human, and a human written text AI"
    ]
   },
   {
@@ -16,7 +18,7 @@
    "id": "05cc5f58",
    "metadata": {},
    "source": [
-    "## The text I'm using\n",
+    "# AI -> Human\n",
     "\n",
     "I will use the below text. It is AI generated. I will step-by-step make it human.\n",
     "\n",
@@ -27,12 +29,12 @@
     "\n",
     "Results:\n",
     "\n",
-    "Predicted Class: Class 2: AI-written\n",
+    "Predicted Class: Class 2: AI-written  \n",
     "Confidence Score: 0.9999960660934448\n",
     "\n",
-    "All class probabilities:\n",
-    "  Class 1: Human-written: 1.2761303196384688e-06\n",
-    "  Class 2: AI-written: 0.9999960660934448\n",
+    "All class probabilities:  \n",
+    "  Class 1: Human-written: 1.2761303196384688e-06  \n",
+    "  Class 2: AI-written: 0.9999960660934448  \n",
     "  Class 3: AI-mimicry: 2.57998385677638e-06\n",
     "\n",
     "\n",
@@ -47,12 +49,12 @@
     "There was a woman named Elaine, and she had a young daughter who went by the name of Chloe. Elaine love Chloe a lot. She never stopped finding ways to tell her that. She'd always make sourdough bread or leave handwritten notes on the corridor table, telling Chloe the same. Chloe was a very quiet girl. She never spoke at all! She never seemed to care about her mom's gestures. She always closed her door, and played her videogames with her screen on and clattering loudly on her keyboard. To her, nothing in life started until the headset went on and the light of her laptop could be seen on her face. Poor girl.\n",
     "\n",
     "\n",
-    "Predicted Class: Class 2: AI-written\n",
+    "Predicted Class: Class 2: AI-written  \n",
     "Confidence Score: 0.8147485852241516\n",
     "\n",
-    "All class probabilities:\n",
-    "  Class 1: Human-written: 0.1852252334356308\n",
-    "  Class 2: AI-written: 0.8147485852241516\n",
+    "All class probabilities:  \n",
+    "  Class 1: Human-written: 0.1852252334356308  \n",
+    "  Class 2: AI-written: 0.8147485852241516  \n",
     "  Class 3: AI-mimicry: 2.6234380129608326e-05\n",
     "\n",
     "\n",
@@ -64,12 +66,12 @@
     "\n",
     "\n",
     "\n",
-    "Predicted Class: Class 2: AI-written\n",
-    "Confidence Score: 0.9669045805931091\n",
+    "Predicted Class: Class 2: AI-written  \n",
+    "Confidence Score: 0.9669045805931091   \n",
     "\n",
-    "All class probabilities:\n",
-    "  Class 1: Human-written: 0.03308353200554848\n",
-    "  Class 2: AI-written: 0.9669045805931091\n",
+    "All class probabilities:  \n",
+    "  Class 1: Human-written: 0.03308353200554848  \n",
+    "  Class 2: AI-written: 0.9669045805931091  \n",
     "  Class 3: AI-mimicry: 1.1837618330901023e-05\n",
     "\n",
     "\n",
@@ -80,13 +82,13 @@
     "So, there was this woman, Elaine, right? And she had this young daughter, Chloe. I’m telling you, Elaine just absolutely lived for that girl, she really absoluteylovely did. She loved her more than anything in this huuuggeee whole wide world, and she was always, always like trying to find some new way to show it or to say it, you know what I mean? Yea? It was like she couldn't stop herself. No matter what she did, she couldn't stop herself. She was constantly baking up that sourdough bread. The house always smelled like it, or she’d be leaving these little notes she would always right all over that table in the corridor. Just trynig to tell Chloe the same thing over and over and over and over again. But Chloe, man I tell you, she was just the quietest thing you'll ever saw! I mean seriously, she never said a word to anyone! Not one word! It was like she didn't even care a wee bit about all those nice things her mom was doing for her, not even a wee little bit! She’d just go right into her room and slam that door shut, staying in there all day and night playing those video games. You could hear her in there, just clattering away on that keyboard, click-clack, click-clack, click-clack real real loud she way, with the screen glowing bright. For that little girl, it was like real life didn't even start, not even one bit, until she put that headset on and you could see the blue light from that laptop reflecting all over her face don't you know. It’s just kind of a shame, you know ya? That poor, poor girl, just always lost in that screen.\n",
     "\n",
     "\n",
-    "Predicted Class: Class 2: AI-written\n",
+    "Predicted Class: Class 2: AI-written  \n",
     "Confidence Score: 0.7049139142036438\n",
     "\n",
-    "All class probabilities:\n",
-    "  Class 1: Human-written: 0.2949157953262329\n",
-    "  Class 2: AI-written: 0.7049139142036438\n",
-    "  Class 3: AI-mimicry: 0.00017028431466314942\n",
+    "All class probabilities:  \n",
+    "  Class 1: Human-written: 0.2949157953262329  \n",
+    "  Class 2: AI-written: 0.7049139142036438  \n",
+    "  Class 3: AI-mimicry: 0.00017028431466314942  \n",
     "\n",
     "\n",
     "I spent 25 mins writing that 😭\n",
@@ -99,13 +101,56 @@
     "Predicted Class: Class 2: AI-written\n",
     "Confidence Score: 0.830733060836792\n",
     "\n",
-    "All class probabilities:\n",
-    "  Class 1: Human-written: 0.77467267662286758\n",
-    "  Class 2: AI-written: 0.130733060836792\n",
+    "All class probabilities:  \n",
+    "  Class 1: Human-written: 0.87467267662286758  \n",
+    "  Class 2: AI-written: 0.030733060836792  \n",
     "  Class 3: AI-mimicry: 0.09459424763917923\n",
     "\n",
     "\n",
     "Close enough"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19c587b3",
+   "metadata": {},
+   "source": [
+    "# Human -> AI\n",
+    "\n",
+    "This is the text I'll use, it's from my report.  \n",
+    "\n",
+    "For this class, I got books from a repository which contains all books on the Gutenberg project. I then had to choose authors. I initially started by choosing 2 authors - Sir Arthur Conan Doyle and P. G. Wodehouse. I then wrote scripts to clean the files of any non-essential text, randomly choose 25 books, and then choose 20 paragraphs which have 100-200 words each. This made our final class 1.  \n",
+    "Almost. I then decided that I should add some authors with very unique, different writing styles, to see if our classifier would be able to separate that, especially when comparing class 1 with class 3. So, paragraphs from Mark Twain and Shakespeare got added to class 1.\n",
+    "\n",
+    "\n",
+    "Predicted Class: Class 1: Human-written  \n",
+    "Confidence Score: 0.8221086859703064  \n",
+    "\n",
+    "All class probabilities:\n",
+    "  Class 1: Human-written: 0.8221086859703064  \n",
+    "  Class 2: AI-written: 0.17784304916858673  \n",
+    "  Class 3: AI-mimicry: 4.822048140340485e-05\n",
+    "\n",
+    "\n",
+    "Great! It is coming as human. Let's change it to AI.\n",
+    "\n",
+    "### 1.\n",
+    "\n",
+    "For this class, I sourced books from a repository containing the complete Project Gutenberg collection and selected a set of authors from it. I initially chose two authors, Sir Arthur Conan Doyle and P. G. Wodehouse. I then wrote scripts to remove non-essential text from the files, randomly select 25 books, and extract 20 paragraphs from each book, with each paragraph containing between 100 and 200 words. This process resulted in the final dataset for Class 1.\n",
+    "\n",
+    "Almost. I later decided to include authors with distinctly different writing styles to test whether the classifier could reliably distinguish them, particularly when comparing Class 1 with Class 3. As a result, additional paragraphs from Mark Twain and Shakespeare were incorporated into the class.\n",
+    "\n",
+    "\n",
+    "Predicted Class: Class 2: AI-written  \n",
+    "Confidence Score: 0.9902260899543762\n",
+    "\n",
+    "All class probabilities:  \n",
+    "  Class 1: Human-written: 0.009702790528535843  \n",
+    "  Class 2: AI-written: 0.9902260899543762  \n",
+    "  Class 3: AI-mimicry: 7.120986265363172e-05\n",
+    "\n",
+    "\n",
+    "First try!!! This was easier. I just had to find overcomplicated synonyms which no one uses, and replace many words with them."
    ]
   }
  ],
